[project]
name = "leetcode"
version = "0.1.0"
description = "LeetCode tasks solutions."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest>=9.0.2",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
    "ipdb>=0.13.13",
    "ipython>=9.8.0",
    "pre-commit>=4.5.1",
    "rich>=14.2.0",
]


[tool.pytest.ini_options]
addopts = "--ignore=test_0000_template.py"

[tool.autoflake]
remove-all-unused-imports = true
remove-unused-variables = true

[tool.black]
line-length = 110
target-version = ['py313']

[tool.isort]
py_version = 313
profile = 'black'
line_length = 110
honor_noqa = true

[tool.basedpyright]
pythonVersion = "3.13"
extraPaths = []

[tool.ipdb]
context = 20
